--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.0",
     "@tailwindcss/line-clamp": "^0.3.1",
+    "firebase": "^9.6.8",
     "next": "12.1.0",
+    "next-auth": "^4.2.1",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
